--- a/src/Components/Employer/styles_Form.css
+++ b/src/Components/Employer/styles_Form.css
@@ -30,3 +30,7 @@
 .form_box5{
     box-shadow:  0px 0px 8px 2px #38709c;
 }
+.search-back{
+    background: #f0f0f0;
+    box-shadow: 0px 2px 7px 1px #3dcc4a;
+}
